refactor: - MDC implementation - Async repository - Proper auth monitor - Simplification of business layer - Simplification of factory layer